// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactList renders with contacts with both email and name 1`] = `
<div
  className="__InlineList__ di"
>
  <span
    className="b"
  >
    Contact
    : 
  </span>
  <ul
    className="separate-items-with-semicolon"
  >
    <li
      key="johndoe@yahoo.com"
    >
      <span>
        John
      </span>
       (
      <ExternalLink
        href="mailto:johndoe@yahoo.com"
      >
        johndoe@yahoo.com
      </ExternalLink>
      )
    </li>
    <li
      key="johndoe2@yahoo.com"
    >
      <span>
        John2
      </span>
       (
      <ExternalLink
        href="mailto:johndoe2@yahoo.com"
      >
        johndoe2@yahoo.com
      </ExternalLink>
      )
    </li>
  </ul>
</div>
`;

exports[`ContactList renders with contacts with only email or name 1`] = `
<div
  className="__InlineList__ di"
>
  <span
    className="b"
  >
    Contact
    : 
  </span>
  <ul
    className="separate-items-with-semicolon"
  >
    <li
      key="johndoe@yahoo.com"
    >
      <ExternalLink
        href="mailto:johndoe@yahoo.com"
      >
        johndoe@yahoo.com
      </ExternalLink>
    </li>
    <li
      key="John2"
    >
      <span>
        John2
      </span>
    </li>
  </ul>
</div>
`;

exports[`ContactList renders with contacts with record and name 1`] = `
<div
  className="__InlineList__ di"
>
  <span
    className="b"
  >
    Contact
    : 
  </span>
  <ul
    className="separate-items-with-semicolon"
  >
    <li
      key="John"
    >
      <Link
        replace={false}
        to="/authors/12345"
      >
        John
      </Link>
    </li>
  </ul>
</div>
`;
